--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -6,7 +6,7 @@
   box-shadow: 10px 5px 5px #000;
   justify-content: space-around;
   align-items: center;
-  position: absolute;
+  position: fixed;
 }
 .content {
   width: 80vw;
@@ -15,9 +15,10 @@
   justify-content: space-around;
 }
 .menu-items {
-  width: 80vw;
+  width: 100vw;
   display: flex;
   justify-content: space-around;
+  text-transform: uppercase;
 }
 .more {
   display: none;
@@ -25,28 +26,35 @@
   height: 40px;
 }
 @media (max-width: 768px) {
+  .header {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .container {
+    flex-direction: column;
+  }
   .more {
     display: flex;
   }
   .content {
     align-items: flex-start;
-    padding: 0 50px;
     display: none;
-    position: fixed;
+    position: relative;
     height: auto;
-
+    box-shadow: 10px 5px 5px #000;
+    background-color: white;
     width: 100vw;
-    z-index: -1;
+    z-index: 1000;
     top: 12%;
   }
   .menu-items {
-    box-shadow: 10px 5px 5px #000;
-    background-color: white;
     width: 100vw;
     height: auto;
     margin-left: 40px;
     flex-direction: column;
-    position: fixed;
+    position: relative;
   }
   .container {
     box-shadow: none;
