--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,21 +1,23 @@
 .container {
-  width: 100vw;
+  width: 100%;
+  height: 100px;
   display: flex;
-  top: 0;
-  left: 0;
-  box-shadow: 10px 5px 5px #000;
   justify-content: space-around;
   align-items: center;
-  position: fixed;
 }
 .content {
-  width: 90vw;
+  box-shadow: 10px 5px 5px #000;
+  width: 100%;
+  background-color: #fff;
+  top: 0;
+  left: 0;
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: fixed;
 }
 .menu-items {
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -33,31 +35,38 @@
     align-items: center;
   }
   .container {
+    height: 150px;
     flex-direction: column;
   }
   .more {
+    position: absolute;
     display: flex;
+    top: 2%;
+    left: 5%;
+    z-index: 100;
   }
   .content {
     align-items: flex-start;
-    display: none;
     position: relative;
     height: auto;
     box-shadow: 10px 5px 5px #000;
     background-color: white;
-    width: 100vw;
-    z-index: 1000;
-    top: 12%;
+    width: 100%;
+    top: 100%;
   }
   .menu-items {
-    width: 100vw;
+    width: 100%;
     margin: 5px;
     height: auto;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     position: relative;
+  }
+  #logo {
+    position: absolute;
+    top: 0;
   }
   .container {
     box-shadow: none;
